converted expressions to records